feat: get single course
