# controllers/course/course.controller.ts
@@ -6,7 +6,13 @@ import {
      UpdateCourseStatusDTO,
      UpdateCourseThumbnailDTO,
 } from '../../schema/dto/course.dto';
-import { createCourse, updateCourse, updateCourseStatus, updateCourseThumbnail } from '../../services/course.service';
+import {
+     createCourse,
+     getSingleCourse,
+     updateCourse,
+     updateCourseStatus,
+     updateCourseThumbnail,
+} from '../../services/course.service';
 
 export const createCourseController = asyncHandler(async (req: Request<{}, {}, CreateCourseDTO>, res) => {
      const userId = req.userId as string;
@@ -39,6 +45,15 @@ export const updateCourseStatusController = asyncHandler(
 
           const data = await updateCourseStatus({ status: req.body.status, id: courseId });
 
+          res.status(200).json(data);
+     }
+);
+
+export const getSingleCourseController = asyncHandler(
+     async (req: Request<{ id: string }, {}, UpdateCourseStatusDTO>, res) => {
+          const courseId = req.params.id;
+
+          const data = await getSingleCourse(courseId);
           res.status(200).json(data);
      }
 );
